adds functionality to create the database and load product data from csv

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "compile": "tsc --noEmit",
     "lint": "eslint src",
     "start": "node dist/index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build-db": "node dist/database/index.js"
   },
   "description": "overview api",
   "main": "src/index.js",
